@@ -3987,3 +3987,4 @@
 ( cvs diff -u -r 1.1.2.3 -r 1.1.2.4 manual/de/glossary.xml;  ) > 3.7.5cvs44.patchset
 ( cvs diff -u -r 1.654.2.4057 -r 1.654.2.4058 configure.ac;  ) > 3.7.5cvs45.patchset
 ( cvs diff -u -r 1.274.2.309 -r 1.274.2.310 src/mainwindow.c;  ) > 3.7.5cvs46.patchset
+( cvs diff -u -r 1.12.2.58 -r 1.12.2.59 src/action.c;  ) > 3.7.5cvs47.patchset
