@@ -1,3 +1,10 @@
+2010-04-15 [pawel]	3.7.5cvs47
+
+	* src/action.c
+		Fix crasher in actions using '%f' argument
+		on multiple files with external scripts which
+		don't return any output.
+
 2010-04-14 [colin]	3.7.5cvs46
 
 	* src/mainwindow.c
